Refactor Registration to Credentials
